--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,14 +43,6 @@
   /* width: 100vw; */
 }
 
-@media (max-width: 764px) {
-  .bg-image {
-    height: 40vh;
-  }
-  .custom-nav-container {
-    height: 40vh;
-  }
-}
 /* SCHEDULE */
 .schedule-image {
   box-sizing: border-box;
@@ -70,10 +62,12 @@
 
 /* Platos */
 .img-dish {
-  width: 100%;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
+  background-size: auto;
 }
-.img-dish:hover {
+.img-container:hover .img-dish {
   border-radius: 1px;
   transition: all 0.5s linear;
 }
@@ -118,4 +112,42 @@
   z-index: 3;
   bottom: 3rem;
   right: 3rem;
+}
+
+/* ORDER */
+
+.order-info {
+  font-weight: bolder;
+}
+.order-info span {
+  font-weight: 100;
+}
+
+/* IMAGEN ADMINISTRADOR */
+.modal-img {
+  /* width: 100%; */
+  height: 300px;
+}
+.modal-img-old {
+  /* width: 100%; */
+  height: 100px;
+}
+.modal-img-preview {
+  max-width: 300px;
+  height: 200px;
+}
+@media (max-width: 764px) {
+  .bg-image {
+    height: 40vh;
+  }
+  .custom-nav-container {
+    height: 40vh;
+  }
+  .modal-img-preview {
+    max-width: 200px;
+  }
+  .modal-img-old {
+    width: 100px;
+    height: 100px;
+  }
 }
